----------------------------------------------------------------------
 OmegaT 2.0.3
----------------------------------------------------------------------
  4 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.0.3

  Implemented requests:

  - StarDict dictionaries support
  http://sourceforge.net/support/tracker.php?aid=2795600

  Other enhancements:

  - Changes in glossary are detected automatically every second. The 
modified glossaries are reloaded in memory transparently, without having to 
reload the project. Glossaries are also read from nested folders, not only from 
the root of /glossary.

  - New index of documentations at the root of the /docs folder, identical
to the one obtained in OmegaT.

  - Dutch localisation updated to 2.02 (UI, Instant Start, Readme, Documentation)

  Bug Fixes:

  - "Unable to read project file!" after creating a new project
  http://sourceforge.net/support/tracker.php?aid=2796271

----------------------------------------------------------------------
 OmegaT 2.0.2 update 1
----------------------------------------------------------------------
2.0.2 update 1 vs. 2.0.2

  2 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.0.2 update 1

  Other enhancements:

  - Slovenian localisation updated to 2.0.1 (UI, readme) 
  - Japanese localisation updated to 2.0.2 (UI, Instant Start)

  Bug Fixes: 

  - The change of font wasn't applied immediately in the Editor
  
  - The Enter/Return key was creating a new line when Use TAB to Advance
was checked

----------------------------------------------------------------------
 OmegaT 2.0.2 
----------------------------------------------------------------------
2.0.2 vs. 2.0.1

  10 Enhancements
   9 Bugfixes
----------------------------------------------------------------------
2.0.2

  Implemented requests:

  - Support for alpha-3 language codes of ISO 639-2 and 639-3